crates/tests/src/snapshots/fe_compiler_tests__features__map@u256_u256_map.fe.snap
---
source: crates/tests/src/features.rs
assertion_line: 538
expression: "format!(\"{}\", harness.gas_reporter)"
---
write_bar([Uint(4), Uint(42)]) used 22388 gas
write_bar([Uint(26), Uint(12)]) used 22388 gas
read_bar([Uint(4)]) used 382 gas
read_bar([Uint(26)]) used 382 gas

