crates/tests/src/snapshots/fe_compiler_tests__features__map_tuple.snap
---
source: crates/tests/src/features.rs
expression: "format!(\"{}\", harness.gas_reporter)"

---
bar([Uint(1234)]) used 44425 gas

