crates/tests/src/snapshots/fe_compiler_tests__features__math.snap
---
source: crates/tests/src/features.rs
expression: "format!(\"{}\", harness.gas_reporter)"
---
sqrt([Uint(16000)]) used 2618 gas
min([Uint(1), Uint(2)]) used 319 gas

