crates/tests/src/snapshots/fe_compiler_tests__features__multi_param.snap
---
source: crates/tests/src/features.rs
expression: "format!(\"{}\", harness.gas_reporter)"

---
bar([Uint(4), Uint(42), Uint(420)]) used 614 gas

