crates/tests/src/snapshots/fe_compiler_tests__features__numeric_casts.snap
---
source: crates/tests/src/features.rs
expression: "format!(\"{}\", harness.gas_reporter)"
---
bar([]) used 32 gas

