crates/tests/src/snapshots/fe_compiler_tests__features__pure_fn_internal_call.snap
---
source: crates/tests/src/features.rs
expression: "format!(\"{}\", harness.gas_reporter)"
---
bar([Uint(42), Uint(26)]) used 202 gas

