crates/tests/src/snapshots/fe_compiler_tests__features__pure_fn_standalone.snap
---
source: crates/tests/src/features.rs
expression: "format!(\"{}\", harness.gas_reporter)"
---
bar([Uint(5)]) used 46594 gas

